# tiny-gpt2

./: .gitignore  README.md  encode.py  example.py  gpt2_loader.py  gpt2_minimal.py  gpt2_ops.py  gpt2_pico.py  gpt2_run.py  gpt2_tensors.py  gpt2_viz.py  pyproject.toml  tokenize.py  tokens.py
tinygpt2/: __init__.py  gpt2_minimal.py  gpt2_ops.py  gpt2_run.py  gpt2_viz.py
