[tool.poetry]
name = "gpt2-weights"
version = "0.1.0"
description = ""
authors = ["sdiehl <stephen.m.diehl@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "tinygpt2" },
]

[tool.poetry.dependencies]
python = "^3.12"
safetensors = "^0.7.0"
requests = "^2.32.5"
numpy = "^2.4.4"
regex = "^2026.4.4"

[tool.poetry.group.vis.dependencies]
matplotlib = "^3.10.9"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ruff = "^0.15.5"
mypy = ">=1.19.1,<3.0.0"
types-requests = "^2.32.4.20260107"
types-regex = "^2026.4.4.20260408"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Disable mypy on the file encoder.py
[tool.mypy]
exclude = ["tinygpt2/encoder.py"]

[tool.ruff]
exclude = ["encoder.py"]
